reorder layout containers; fix z-index bug: outbacks must be higher than header, footer to allow dropdown menues to overlap

--- a/code/css/payload.css
+++ b/code/css/payload.css
@@ -186,7 +186,7 @@ div.floatingframe {
   position:fixed;
   top:0px;
   left:0px;
-  z-index:200;
+  z-index:9999;
   border-style:none;
   background-color:transparent !important;
   display:none;
@@ -194,7 +194,7 @@ div.floatingframe {
   margin:0px !important;
   padding:0px !important;
   text-align:left !important;
-  /* border:1px solid green; */
+  overflow:visible;
 }
 div.floatingpayload {
   position:relative;
@@ -241,13 +241,13 @@ div.floatingframe.popup {
  *         <div 'class=dropdownitem'>
  *         <div 'class=dropdownitem'>
  *         ...
- *    <div 'class=shadow'>
+ *     <div 'class=shadow'>
  *
 */
 
 div.dropdownelement {
   padding:0.2ex 1em 0.2ex 1em;
-  position:relative;
+  position:relative; /* need this to make position:absolute; work _inside_ */
   font-weight:bold;
   color:#101080;
   background-image:url(../../code/img/open.small.blue.trans.gif);
